# ng-video-lecture

./: .gitignore  gpt_dev.ipynb  pyproject.toml
