[tool.poetry]
name = "ng-video-lecture"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
#packages = [{include = "."}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.3"
torch = "^2.1.1"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"
tiktoken = "^0.5.2"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
